- Removed unnecessary break lines. - Corrected the ItemNumber elements created. - Improved wrapping and width for the #container.

--- a/style.css
+++ b/style.css
@@ -5,4 +5,6 @@
 #container {
     display: flex;
     flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
